# bjplus3

./: .gitignore  CMakeLists.txt  Makefile  README.md  buildnrun.sh  run.sh
include/: BlackjackGame.h  Card.h  Dealer.h  Player.h
include/game/: AIPlayer.h  BlackjackGame.h  Card.h  Dealer.h  Deck.h  Hand.h  LLMClient.h  OllamaClient.h  Player.h  StandardPlayer.h
include/strategies/: AggrBetStrategy.h  BasicStrategy.h  ConsBetStrategy.h  IBetStrategy.h  IPlayStrategy.h
include/utils/: GameLogger.h  utils.h
src/: BlackjackGame.cpp  Card.cpp  Dealer.cpp  GameLogger.cpp  Player.cpp  main.cpp
src/game/: AIPlayer.cpp  BlackjackGame.cpp  Dealer.cpp  Deck.cpp  Hand.cpp  Player.cpp
src/strategies/: BasicStrategy.cpp
src/utils/: GameLogger.cpp  utils.cpp
